# FoccoERPy

./: LICENSE  README.md  makefile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml
FoccoERPy/: __init__.py  core.py  exceptions.py  handlers.py
FoccoERPy/Focco/: __init__.py
FoccoERPy/FoccoSession/: __init__.py
FoccoERPy/core/: __init__.py
FoccoERPy/exceptions/: __init__.py
tests/: FoccoERPy_test.py  conftest.py  test_focco.py
