[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FoccoERPy"
version = "0.2.13"
authors = [
  { name="Gabriel Niziolek", email="ganiziolek@gmail.com" },
]
description = "Biblioteca de funções que permitem se conectar à API do FoccoERP "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "requests >= 2.28",
  "python-benedict >= 0.27",
  "numpy >= 1.23"
]

[project.urls]
"Homepage" = "https://github.com/GaNiziolek/FoccoERPy"
"Bug Tracker" = "https://github.com/GaNiziolek/FoccoERPy/issues"