[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "FoccoERPy"
version = "1.0.0"
authors = [
  { name="Gabriel Niziolek", email="ganiziolek@gmail.com" },
]
description = "Biblioteca de funções que permitem se conectar à API do FoccoERP "
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "optional-dependencies"]

[project.urls]
"Homepage" = "https://github.com/GaNiziolek/FoccoERPy"
"Bug Tracker" = "https://github.com/GaNiziolek/FoccoERPy/issues"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = {file = ["requirements-dev.txt"]}}
